# mindmath

./: .gitmodules  BUILD  CMakeLists.txt  Copyright.txt  README.md  WORKSPACE  conan_build.bat  conanfile.txt  cpack_run.bat  install_and_pack.cmake
common/: BUILD  CMakeLists.txt
common/include/common/: operation.h  setup.h  type.h
common/src/: setup.cpp
config/: BUILD  CMakeLists.txt
config/include/config/: config_parser.h  config_parser_factory.h  parsing_types.h
config/src/: config_parser_factory.cpp
config/src/parsing/: config_parser_ini.cpp  config_parser_ini.h
console/: BUILD  BUILD.bazel  CMakeLists.txt
console/include/console/: game.h  printer.h  statistic.h
console/src/: game.cpp  game.h  main.cpp  printer.cpp  printer.h  statistic.h
console/test/: BUILD  CMakeLists.txt
console/test/src/: printer.cpp  printer_helper.cpp
gtest/: BUILD
mindmath/: BUILD  CMakeLists.txt
mindmath/include/mindmath/: example_view.h  generator.h  operation.h  setup.h
mindmath/src/: generator.cpp
mindmath/test/: BUILD  BUILD.bazel  CMakeLists.txt
mindmath/test/src/: generator.cpp
resource/: icon-math-96.rc
